--- a/template-outcome.Rmd
+++ b/template-outcome.Rmd
@@ -3,7 +3,9 @@ title: "outcome analysis"
 description: |
   Within-outcome analysis 
 date: "`r Sys.Date()`"
-output: distill::distill_article
+output: 
+  distill::distill_article:
+    toc: true
 params: 
   outcome: "mood"
 bibliography: references.bib
@@ -29,7 +31,7 @@ library(gt)
 
 # nma
 
-We will provide an nma **for each outcome**, which adheres to Cochrane's MECIR [@higgins2016] standards for reporting network meta-analyses, in particular, this entails ensuring we meet the thirty-two requirements in the extended PRISMA checklist for network meta-analysis [@hutton2015]. 
+We will provide a network meta-analysis (NMA) **for each outcome**, which adheres to Cochrane's MECIR [@higgins2016] standards for reporting network meta-analyses, in particular, this entails ensuring we meet the thirty-two requirements in the extended PRISMA checklist for network meta-analysis [@hutton2015]. 
 
 ## parameterised report
 
@@ -37,20 +39,37 @@ This page is a **parameterised report**. Each analysis, for each outcome, requir
 
 When we get closer to publication, we may wish to do outcome-specific analyses in addition to the standardised analyses presented in the parameterised reports.
 
-This is the parameterised report for the outcome:
+This is the automatically-generated parameterised report for the outcome: **`r params$outcome`**.
 
-***
 
-```{r }
+# structure of analysis
 
-params$outcome %>% cat()
+```{r echo=TRUE}
+# need table of variables here
 
 ```
 
-***
+
+# simulation parameters
+
+```{r echo=TRUE}
+# model parameters: subgroups, etc.
+# filter model table
+
+```
+
+# random effects models 
+
+## cipriani-style all-in
+
+## subgroup analyses
+
+### condition [general grouping]
+
+### type [SSRI]
+
+### comparisons 
+
+# pairwise 
 
 
-###   scope of this analysis
-
--   post-intervention
--   antidepressant vs placebo
