--- a/index.Rmd
+++ b/index.Rmd
@@ -7,283 +7,6 @@ bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = FALSE, eval=FALSE)
-
-# Learn more about creating websites with Distill at:
-# https://rstudio.github.io/distill/website.html
-
-# Learn more about publishing to GitHub Pages at:
-# https://rstudio.github.io/distill/publish_website.html#github-pages
-
+knitr::opts_chunk$set(echo = TRUE)
 ```
 
-```{r pkgs}
-library(tidyverse)
-library(gt)
-library(targets)
-library(glue)
-
-source("R/hpp_themes.R")
-
-
-conflicted::conflict_prefer("filter", "dplyr")
-```
-
-```{r get data}
-withr::with_dir(here::here(), {
-  tar_load(outcomes)
-  tar_load(obs)
-  tar_load(metapar)
-})
-
-```
-
-## definitions
-
-**chronic pain** := \> 3 months
-
-**primary pain** := cause unknown; eg. lower back pain
-
-**secondary pain** := cause known; eg. arthritis
-
-------------------------------------------------------------------------
-
-## outcomes
-
-What we said we said we'd investigate [@birkinshaw2021]:
-
-### Primary outcomes
-
--   Substantial pain relief: at least 50% reduction in pain intensity from baseline, irrespective of pain measurement method (e.g. visual analogue scale, numerical rating scale).
-
--   Mood (continuous data, e.g. visual analogue scale or validated measures such as the Hospital Anxiety and Depression Scale).
-
--   Number and percentage of participants reporting adverse events (reported adverse events and serious adverse events).
-
-### Secondary outcomes
-
--   Moderate pain relief: at least 30% reduction in pain intensity from baseline.
-
--   Patient Global Impression of Change (PGIC): moderate (much or very much improved) and substantial (very much improved).
-
--   Withdrawal (measured by the proportion of participants (number and percentage of total and per arm) withdrawing for any reason).
-
--   Physical functioning (includes measures of physical movement and disability; measured by any validated scale).
-
--   Sleep quality (includes insomnia, restfulness, etc.; measured by any validated scale, e.g. Jenkins Sleep Scale).
-
--   Quality of life (measured by any validated scale).
-
-### Moderators and subgroups
-
--   type of drug: SSRI
--   chronic pain condition
--   dosage
-
-------------------------------------------------------------------------
-
-### Currently included outcomes
-
-```{r}
-outcomes
-```
-
-### chronic pain conditions
-
-> Question for Hollie: Does this visualisation go with why you thought it was useful to have the total number of studies collected, regardless of outcome, as wells as the the outcome come for each condition? What would make it more informative?  
-
-```{r}
-condition_counts <- 
-  obs %>%
-  left_join(metapar, by = c("study", "arm")) %>%
-  filter(!is.na(condition)) %>% 
-  select(outcome, study, condition) %>% 
-  distinct() %>%
-  group_by(condition) %>% 
-  mutate(
-    total = n_distinct(study)
-  ) %>%
-  group_by(outcome, condition) %>% 
-  summarise(
-    total = total,
-    per_outcome = n_distinct(study)
-  ) %>% 
-  distinct() %>% 
-  arrange(desc(total)) %>% 
-  filter(per_outcome >= 3) %>% 
-  ungroup()
-
-```
-
-```{r error=TRUE}
-
-condition_counts  %>%  
-  mutate(across(everything(), as.character)) %>% 
-  pivot_wider(
-    id_cols = c(condition, total),
-    names_from = outcome,
-    values_from = per_outcome,
-    values_fill = " "
-  ) %>%
-  gt() %>% 
-  tab_header(title = "Number of studies collected for each condition and outcome",
-             subtitle = "Less than three studies excluded") %>% 
-  cols_label(
-    condition = "Condition",
-    total = "Total",
-    mood_depression = "Mood (depression)",
-    adverse = "Adverse events",
-    pain = "Pain"
-  ) %>% 
-  tab_spanner(
-    label = "Outcome-level counts",
-    columns = c("mood_depression", "adverse", "pain")
-  )  %>%
-  cols_align(align = "center", columns = vars(mood_depression, adverse, pain)) %>% 
-  cols_align(align = "right", vars(condition)) %>% 
-  hpp_tab(
-    vertical_divider = total) 
-
-
-```
-
-We might also, wish to consider the number of studies collected for each condition and outcome in relation to the total number of studies collected for the condition.
-
-That is... example
-
-```{r fig.height=10}
-condition_counts %>%
-  mutate(
-    small = total <= 10,
-    small = if_else(small, "less than or equal to 10", "greater than 10"),
-    small = fct_relevel(small, "less than or equal to 10"),
-    outcome = case_when(
-      outcome == "adverse" ~ "Adverse events",
-      outcome == "mood_depression" ~ "Mood (depression)",
-      outcome == "pain" ~ "Pain"
-    )
-  ) %>%
-  ggplot(aes(x = condition)) +
-  geom_bar(aes(y = total),
-           stat = "identity",
-           alpha = 0.4,
-           fill = "#a0c0de") +
-  geom_bar(aes(y = per_outcome),
-           stat = "identity",
-           alpha = 0.4,
-           fill = "#3c75aa") +
-  facet_grid(outcome ~ small, 
-             scales = "free"
-             ) +
-  coord_flip() +
-  ggthemes::theme_hc() +
-  labs(
-    title = str_wrap("Number of studies for each condition by outcome", 30),
-    subtitle = "Proportion of total studies collected by outcome",
-    y = "Total number of studies collected for condition (light), proportion collected for outcome (dark)",
-    x = "Condition",
-    caption = str_wrap("The questions this visualisation seeks to answer are: how many studies were collected for each condition, per outcome? And what proportion of the total number of studies collected is this count? This grid of visualisations shows the number of studies (x-axis) collected for a particular chronic pain condition (y-axis). Since the counts are on varied scales, the left side of the grid shows the count that are less than or equal to 10, and the right column of the grid displays the counts for which there was greater than 10 studies collected. The horizontal segments of the grid group the counts by outcome.", width = 80)
-  )
-
-
-```
-
-## type
-
-```{r}
-obs %>%
-  left_join(metapar, by = c("study", "arm")) %>%
-  filter(!is.na(class)) %>%
-  group_by(outcome, class) %>%
-  summarise(studies = n_distinct(study)) %>%
-   arrange(desc(studies)) %>%
-  mutate(across(everything(), as.character)) %>% 
-  pivot_wider(
-    id_cols = class,
-    names_from = outcome,
-    values_from = studies,
-    values_fill = " "
-  ) %>%
-  gt() %>% 
-  tab_header(title = "Number of studies collected for each class and outcome",
-             subtitle = "Intervention classs with less than three studies excluded") %>% 
-  cols_label(
-    class = "Class",
-    mood_depression = "Mood (depression)",
-    adverse = "Adverse events",
-    pain = "Pain"
-  ) %>% 
-  hpp_tab(vertical_divider = class)
-
-
-```
-
-## class
-
-```{r}
-obs %>%
-  left_join(metapar, by = c("study", "arm")) %>%
-  filter(!is.na(class)) %>%
-  group_by(outcome, class) %>%
-  summarise(studies = n_distinct(study)) %>%
-   arrange(desc(studies)) %>%
-  mutate(across(everything(), as.character)) %>% 
-  pivot_wider(
-    id_cols = class,
-    names_from = outcome,
-    values_from = studies,
-    values_fill = ""
-  ) %>%
-  gt() %>% 
-  tab_header(title = "Number of studies collected for each class and outcome") %>% 
-  cols_label(
-    class = "Class",
-    mood_depression = "Mood (depression)",
-    adverse = "Adverse events",
-    pain = "Pain"
-  ) %>% 
-  hpp_tab(vertical_divider = class)
-
-
-```
-
-## timeframes
-
-> We will compare antidepressants to the comparators immediately post‐treatment, at short‐term follow‐up (12 weeks or less) and long‐term follow up (over 12 weeks). Where studies include multiple follow‐up time points, we will take the most recent time point within each period. If multiple measures are used, then we will extract from the most valid, reliable and widely used measure in the field [@birkinshaw2021].
-
-timepoint|definition
--|-
-post-treatment | post intervention
-short-term follow up | 12 weeks or less
-long-term follow up | over 12 weeks
-
-Very few follow-ups:
-
-```{r}
-obs %>%
-  left_join(metapar, by = c("study", "arm")) %>%
-  filter(!is.na(timepoint)) %>%
-  group_by(outcome, timepoint) %>%
-  summarise(studies = n_distinct(study)) %>%
-   arrange(desc(studies)) %>%
-  mutate(across(everything(), as.character)) %>% 
-  pivot_wider(
-    id_cols = timepoint,
-    names_from = outcome,
-    values_from = studies,
-    values_fill = " "
-  ) %>%
-  gt() %>% 
-  tab_header(title = "Number of studies collected for each timepoint and outcome",
-             subtitle = "Intervention timepoints with less than three studies excluded") %>% 
-  cols_label(
-    timepoint = "Timepoint",
-    mood_depression = "Mood (depression)",
-    adverse = "Adverse events",
-    pain = "Pain"
-  ) %>% 
-  hpp_tab(vertical_divider = timepoint)
-
-```
-
-## cross over vs parallel
